--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "axois": "0.0.1-security",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "geolib": "^3.3.1",
