--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "nodemon server.js",
-    "consumer": "nodemon kafka/consumer.app.js",
-    "producer":"nodemon kafka/producer.app.js"
+    "start": "nodemon server.js"
+    
   },
   "author": "",
 
