--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "nodemon server.js"
-    
   },
   "author": "",
-
-
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
@@ -26,6 +23,7 @@
     "mongoose": "^5.10.9",
     "node-excel-export": "^1.4.4",
     "nodemon": "^2.0.6",
+    "redis": "^3.0.2",
     "request-ip": "^2.1.3"
   }
 }
